--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-pyrite (0.2.0) stable; urgency=low
+
+  * Ignore None gauge metrics.
+
+ -- Viacheslav Chimishuk <vchimishuk@yandex.ru>  Mon, 13 Jun 2022 15:30:00 +0300
+
 python-pyrite (0.1.0) stable; urgency=low
 
   * Initial release.
